fixed login/registration form alignment

--- a/static/custom.css
+++ b/static/custom.css
@@ -11,7 +11,7 @@
     flex-direction: column; 
     align-items: center; 
     justify-content: center;
-    width: 300px;
+    width: 320px;
 }
 .anchor-button{
     border: 5px solid gold;
